--- a/index.html
+++ b/index.html
@@ -12,35 +12,21 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header animated-bg" id="header">
-        <img src="game.png" />
-      </div>
+      <div class="animated-bg card-header" id="header">&nbsp;</div>
       <div class="card-content">
-        <h3 class="card-title animated-bg animated-bg-text" id="title">
-          Lorem ipsum dolor sit amet.
-          <p class="card-short" id="short">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum in
-            placeat reprehenderit repellendus est veniam doloremque suscipit
-            omnis. Inventore dolores quidem sit voluptas, culpa adipisci quam
-            tenetur nisi obcaecati excepturi?
-            <span class="animated-bg animated-bg-text">&nbsp;</span>
-            <span class="animated-bg animated-bg-text">&nbsp;</span>
-            <span class="animated-bg animated-bg-text">&nbsp;</span>
-          </p>
-          <div class="author">
-            <div class="profile-img animated-img" id="profile-img">
-              <img src="greenish2.png" alt="" />
-            </div>
-            <div class="author-info">
-              <strong class="animated-bg animated-bg-text" id="name">
-                Mr Greenish
-              </strong>
-              <small class="animated-bg animated-bg-text" id="date">
-                Today
-              </small>
-            </div>
+        <h3 class="card-title animated-bg-text" id="title">&nbsp;</h3>
+        <p class="card-short" id="short">
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+        </p>
+        <div class="author">
+          <div class="animated-bg profile-img" id="profile-img">&nbsp;</div>
+          <div class="animated-bg author-info">
+            <strong class="animated-bg-text" id="name">&nbsp;</strong>
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
           </div>
-        </h3>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
