--- a/index.html
+++ b/index.html
@@ -11,24 +11,65 @@
     <title>Content Placeholder</title>
   </head>
   <body>
+    <div class="cards">
+      <div class="card">
+        <div class="animated-bg card-header header">&nbsp;</div>
+        <div class="card-content">
+          <h3 class="card-title animated-bg-text title">&nbsp;</h3>
+          <p class="card-short short">
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+          </p>
+          <div class="author">
+            <div class="animated-bg profile-img profile-img">&nbsp;</div>
+            <div class="animated-bg author-info">
+              <strong class="animated-bg-text name">&nbsp;</strong>
+              <small class="animated-bg animated-bg-text date">&nbsp;</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="animated-bg card-header header">&nbsp;</div>
+        <div class="card-content">
+          <h3 class="card-title animated-bg-text title">&nbsp;</h3>
+          <p class="card-short short">
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+          </p>
+          <div class="author">
+            <div class="animated-bg profile-img profile-img">&nbsp;</div>
+            <div class="animated-bg author-info">
+              <strong class="animated-bg-text name">&nbsp;</strong>
+              <small class="animated-bg animated-bg-text date">&nbsp;</small>
+            </div>
+          </div>
+        </div>
+      </div>
+   
     <div class="card">
-      <div class="animated-bg card-header" id="header">&nbsp;</div>
-      <div class="card-content">
-        <h3 class="card-title animated-bg-text" id="title">&nbsp;</h3>
-        <p class="card-short" id="short">
-          <span class="animated-bg animated-bg-text">&nbsp;</span>
-          <span class="animated-bg animated-bg-text">&nbsp;</span>
-          <span class="animated-bg animated-bg-text">&nbsp;</span>
-        </p>
-        <div class="author">
-          <div class="animated-bg profile-img" id="profile-img">&nbsp;</div>
-          <div class="animated-bg author-info">
-            <strong class="animated-bg-text" id="name">&nbsp;</strong>
-            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
+        <div class="animated-bg card-header header">&nbsp;</div>
+        <div class="card-content">
+          <h3 class="card-title animated-bg-text title">&nbsp;</h3>
+          <p class="card-short short">
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+          </p>
+          <div class="author">
+            <div class="animated-bg profile-img profile-img">&nbsp;</div>
+            <div class="animated-bg author-info">
+              <strong class="animated-bg-text name">&nbsp;</strong>
+              <small class="animated-bg animated-bg-text date">&nbsp;</small>
+            </div>
           </div>
         </div>
       </div>
     </div>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
